--- a/assets/css/uc-voting.css
+++ b/assets/css/uc-voting.css
@@ -7,11 +7,11 @@
 	background: url('//www.esri.com/~/media/557A585D0BAB4100A43631B8CA01AE99') top center no-repeat;
 }
 .uc-banner .uc-header {
-	margin: 10px 0 30px 0;
+	margin: 50px 0 30px 0;
 }
 
 #banner {
-	background: #f7f7f7 url(http://www.esri.com/~/media/2B093C860120405C98C1DAA89E8716BF) top center no-repeat !important;
+	background: url(http://www.esri.com/~/media/2B093C860120405C98C1DAA89E8716BF) top center no-repeat !important;
 	height: 610px;
 	text-align: center;
 	width: 100%;
@@ -21,11 +21,12 @@
 	color: #fff;
 }
 .uc-banner h1 {
-	font-size: 48px;
+	font-size: 38px;
 }
 .uc-banner h3 {
 	font-size: 20px;
 	margin: 20px auto;
+	text-align: center;
 	width: 770px;
 }
 
@@ -284,19 +285,20 @@ input[type="checkbox"] {
 }
 
 .cta-button {
-	background: #f89927;
+	background: #007ac3;
 	color: #fff;
 	display: block;
-	font-size: 14px;
+	font-size: 18px;
 	margin: auto auto;
 	margin-top: 25px;
 	padding: 15px 0px;
 	text-decoration: none;
+	transition: all .25s ease-out;
 	width: 70%;
 }
 
 .cta-button:hover {
-  background: #F36F20;
+	background: #006faf;
   color: #fff;
   text-decoration: none;
 }
