Replaced logos with next years logo designs, also modifed logo images to match the containers width.

--- a/assets/css/uc-voting.css
+++ b/assets/css/uc-voting.css
@@ -89,19 +89,19 @@
 }
 
 .slide1 {
-	background: url(http://www.esri.com/~/media/ACA74CE045664D5DA0DD4DC2B533745F) no-repeat;
+	background: url('//www.esri.com/~/media/633CC05C54234AE595DD8F3D40F234B8') no-repeat;
 	width: 100%;
 }
 .slide2 {
-	background: url(http://www.esri.com/~/media/F2E5F4DA79F540BF902D62819C7557FA) no-repeat;
+	background: url('//www.esri.com/~/media/1576A8B4EE7D4B23BE7546533A8E9126') no-repeat;
 	width: 100%;
 }
 .slide3 {
-	background: url(http://www.esri.com/~/media/3467E9BAE9A9448BB3E2156A37E0B4FC) no-repeat;
+	background: url('//www.esri.com/~/media/C0EF0B3544374846AF1B5B0E27810C6F') no-repeat;
 	width: 100%;
 }
 .slide4 {
-	background: url(http://www.esri.com/~/media/2FE29D1012D746F19850CCC836B5BCBB) no-repeat;
+	background: url('//www.esri.com/~/media/3E780E8F1729452DB35058D314C4FD2A') no-repeat;
 	width: 100%;
 }
 
