--- a/assets/css/uc-voting.css
+++ b/assets/css/uc-voting.css
@@ -70,7 +70,7 @@
 	cursor: pointer;
 }
 .gray-bar:hover .check {
-	background: url('http://www.esri.com/~/media/B067D6F546A24A2A9373F72F8C72A248') -19px 0px no-repeat;
+	background: url('//www.esri.com/~/media/B067D6F546A24A2A9373F72F8C72A248') -19px 0px no-repeat;
 }
 .gray-bar:hover .choose {
 	color: #fff;
@@ -122,7 +122,7 @@
 	float: left;
 }
 .check {
-	background: url(//www.esri.com/~/media/B067D6F546A24A2A9373F72F8C72A248') 0px 0px no-repeat;
+	background: url('//www.esri.com/~/media/B067D6F546A24A2A9373F72F8C72A248') 0px 0px no-repeat;
 	height: 20px;
   width: 20px
 }
